# genesis

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs  state.rs
src/gfx/: billboard.wgsl  camera.rs  mod.rs  shader.wgsl
src/input/: mod.rs
src/state/: gfx.rs  input.rs
