[package]
name = "genesis"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.18.0", features = ["derive"] }
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color"] }
glam = { version = "0.29.0", features = ["bytemuck"] }
log = { version = "0.4.22", features = ["release_max_level_info"] }
pollster = "0.3.0"
rustc-hash = "2.0.0"
wgpu = { version = "22.1.0", default-features = false, features = ["wgsl"] }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen"] }
