[package]
name = "genesis"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.11.5", default-features = false, features = ["auto-color", "color"] }
log = "0.4.22"
pollster = "0.3.0"
rustc-hash = "2.0.0"
wgpu = { version = "22.1.0", default-features = false, features = ["wgsl"] }
winit = { version = "0.30.5", default-features = false, features = ["rwh_06", "wayland", "wayland-dlopen"] }
